--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 				<div class="small-card">
 					<header class=box-header>Hypertension</header>
 					<div class=div-class>
-						<span> Sysolic Blood Pressure: </span>
+						<span> Systolic Blood Pressure: </span>
 						<span id="sys">undefined</span>
 					</div>
 					<div class=div-class>
-						<span> Diatolic Blood Pressure: </span>
+						<span> Diastolic Blood Pressure: </span>
 						<span id="dia">undefined</span>
 					</div>
 					
